# securaCV

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  architecture.md  break_glass.rs  codex-plan.md  codex-prompt.md  config.example.toml  hacs.json  lib.rs  log_verify_README.md  mod.rs  securaCV_whitepaper.md  spec.md  v1-roadmap.md  why_this_matters.md  witnessd.rs
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: conformance_report.yml  security_report.yml
.github/workflows/: codeql.yml  firmware_canary_vision_ci.yml  rust.yml  validate.yml
brands/: SUBMIT_TO_BRANDS.md  generate_brand_assets.py
brands_submission/: SUBMIT_TO_BRANDS.md
custom_components/secura_cv/: __init__.py  config_flow.py  manifest.json  sensor.py
custom_components/secura_cv/translations/: en.json
custom_components/securacv/: __init__.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  manifest.json  sensor.py  services.yaml  strings.json
docs/: ci.md  cli_ui.md  container.md  demo.md  esp32_s3_setup.md  evidence_lifecycle.md  failure_semantics.md  frigate_integration.md  governance_and_invariants.md  homeassistant_setup.md  identity_transport.md  inference_backends.md  litterbox_witness_demo.md  manual_test_plan_mqtt.md  openipc_architecture_learnings.md  pqc_mode.md  root_paradox.md  rtsp_setup.md  secure_provisioning.md  seeed_xiao_vision_ai_setup.md  v4l2_setup.md  why_witnessing_matters.md  witness-kernel.html
docs/integrations/: home-assistant-frigate-mqtt.md
docs/reviews/: arduino_demo_review_commands.md  arduino_demo_review_tasks.md
examples/: conformance_fixture.rs
examples/firmware/esp32c3_grove_vision_ai_v2_litterbox/: esp32c3_grove_vision_ai_v2_litterbox.ino  secrets.example.h
examples/firmware/grove_vision_ai_v2_litterbox_firmware/: grove_vision_ai_v2_litterbox_firmware.ino
firmware/: .gitignore  ARCHITECTURE.md  Makefile  README.md
firmware/boards/: README.md
firmware/boards/esp32-c3/: README.md
firmware/boards/xiao-esp32s3-sense/: README.md
firmware/canary/: partitions_ota.csv  platformio.ini  sdkconfig.defaults
firmware/canary/include/: canary_config.h  log_level.h
firmware/canary/scripts/: ota_deploy.py  ota_deploy.sh
firmware/canary/src/: main.cpp
firmware/canary_vision/: SECURITY_PRIVACY_INTENT.md  platformio.ini
firmware/canary_vision/canary_vision/: .gitignore  NOTICE
firmware/canary_vision/secrets/: secrets.example.h
firmware/canary_vision/src/: main.cpp
firmware/common/: README.md
firmware/common/bluetooth/: bluetooth_mgr.h
firmware/common/camera/: camera_mgr.h
firmware/common/chirp/: chirp_channel.h
firmware/common/core/: log.h  ring_buffer.h  types.h  version.h
firmware/common/encoding/: cbor.h
firmware/configs/: README.md
firmware/envs/: README.md
firmware/projects/canary-ota/components/securacv_ota/: CMakeLists.txt  Kconfig  securacv_ota.c
firmware/projects/canary-ota/components/securacv_ota/include/: securacv_ota.h
firmware/provisioning/: .gitignore  README.md  create_manifest.py  generate_keys.sh  partitions_secure.csv  platformio_secure.ini  provision_canary.sh  sdkconfig.defaults.secure  verify_device.py
firmware/scripts/: build_arduino.sh
homeassistant/: Dockerfile  README.md  config.yaml  discover_cameras.sh  repository.yaml  run.sh
integrations/ha_frigate_mqtt/: README.md  TASKS.md  docker-compose.yml  frigate.yml  verify_pipeline.sh
kernel/: architecture.md  rf_presence_architecture.md
scripts/ci/: conformance.sh
spec/: README.md  break_glass.md  canary_free_signals_v0.md  canary_mesh_network_v0.md  chirp_channel_v0.md  co_signing.md  event_contract.md  gossip_replication_v0.md  invariants.md  securacv-witness-kernel-4.html  threat_model.md
src/: break_glass.rs  config.rs  frame.rs  lib.rs  storage.rs  ui.rs  verify.rs  verify_helpers.rs
src/api/: mod.rs
src/break_glass/: cli.rs  core.rs  mod.rs
src/crypto/: mod.rs  policy.rs  signatures.rs
src/detect/: backend.rs  mod.rs  registry.rs  result.rs
src/ingest/: esp32.rs  features.rs  file.rs  file_ffmpeg.rs  mod.rs  normalize.rs  rtsp.rs  rtsp_ffmpeg.rs  v4l2.rs
src/log/: mod.rs
src/module_runtime/: event_payload.rs  mod.rs  sandbox.rs
src/transport/: frigate.rs  mod.rs  tls.rs
src/vault/: crypto.rs  format.rs  mod.rs
tests/: api_capability_tokens.rs  compile_fail.rs  export_events_authorized.rs  frigate_integration.rs  kernel_hardening.rs  witnessd_config.rs
tests/compile_fail/: detector_pixel_return.rs  detector_pixel_return.stderr  inference_view_private_frame.rs  inference_view_private_frame.stderr  raw_frame_private_data.rs  raw_frame_private_data.stderr  serialize_inference_view.rs  serialize_inference_view.stderr  serialize_raw_frame.rs  serialize_raw_frame.stderr
(+145 files in other folders)
