[package]
name = "witness-kernel"
version = "0.3.1"
edition = "2021"
license = "UNLICENSED"
description = "Privacy Witness Kernel (PWK) - witnessd + tools + break_glass"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
hex = "0.4"

[[bin]]
name = "witnessd"
path = "src/bin/witnessd.rs"

[[bin]]
name = "log_verify"
path = "src/bin/log_verify.rs"


[[bin]]
name = "break_glass"
path = "src/bin/break_glass.rs"
