[package]
name = "witness-kernel"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = "Privacy Witness Kernel (PWK) - witnessd + tools + break_glass"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
ed25519-dalek = "2.1"
ctrlc = "3.4"
indicatif = { path = "vendor/indicatif" }
image = { version = "0.25", default-features = false, features = ["jpeg"], optional = true }
ureq = { version = "2.9", optional = true }
url = { version = "2.5", optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
ffmpeg-next = { version = "6.0", optional = true }
v4l = { version = "0.14", optional = true }
ouroboros = { version = "0.18", optional = true }

[dev-dependencies]
trybuild = "1.0.89"
tempfile = "3.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
libseccomp = "0.3"
libseccomp-sys = "0.3"

[features]
rtsp-gstreamer = ["gstreamer", "gstreamer-app", "gstreamer-video"]
rtsp-ffmpeg = ["ffmpeg-next"]
ingest-esp32 = ["image", "ureq", "url"]
ingest-v4l2 = ["v4l", "ouroboros"]

[[bin]]
name = "witnessd"
path = "src/bin/witnessd.rs"

[[bin]]
name = "log_verify"
path = "src/bin/log_verify.rs"


[[bin]]
name = "break_glass"
path = "src/bin/break_glass.rs"

[[bin]]
name = "export_events"
path = "src/bin/export_events.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "export_verify"
path = "src/bin/export_verify.rs"

[[bin]]
name = "frigate_bridge"
path = "src/bin/frigate_bridge.rs"

[[bin]]
name = "event_mqtt_bridge"
path = "src/bin/event_mqtt_bridge.rs"

[[bin]]
name = "witness_api"
path = "src/bin/witness_api.rs"
